src/djehuty/web/resources/static/css/main.css
@font-face {
    font-family: 'SourceSans';
    src: url('/static/fonts/SourceSansPro-Regular.ttf') format('truetype');
    font-weight: normal;
    font-style: normal;
}
@font-face {
    font-family: 'SourceSans-Italic';
    src: url('/static/fonts/SourceSansPro-Italic.ttf') format('truetype');
    font-weight: normal;
    font-style: italic;
}
@font-face {
    font-family: 'SourceSans-Bold';
    src: url('/static/fonts/SourceSansPro-Bold.ttf') format('truetype');
    font-weight: bold;
    font-style: normal;
}
@font-face {
    font-family: 'FiraMono';
    src: url('/static/fonts/FiraMono-Regular.ttf') format('truetype');
    font-weight: normal;
    font-style: normal;
}
@font-face {
    font-family: 'FiraMono';
    src: url('/static/fonts/FiraMono-Bold.ttf') format('truetype');
    font-weight: bold;
    font-style: normal;
}
@font-face {
  font-family: 'FontAwesome';
  font-style: normal;
  font-weight: 900;
  font-display: block;
  src: url("/static/fonts/fa-solid-900.eot");
  src: url("/static/fonts/fa-solid-900.eot?#iefix") format("embedded-opentype"),
       url("/static/fonts/fa-solid-900.woff2") format("woff2"),
       url("/static/fonts/fa-solid-900.woff") format("woff"),
       url("/static/fonts/fa-solid-900.ttf") format("truetype"),
       url("/static/fonts/fa-solid-900.svg#fontawesome") format("svg");
}
body,html {
    width: 100%;
    height: 100%;
    padding: 0em;
    margin: 0em;
    font-family: 'SourceSans', sans-serif;
    font-size: 12pt;
    color: #000000;
    background: #ffffff;
}
#wrapper {
    width: 100%;
    min-width: 880pt;
    min-height: 100%;
    padding: 0em;
    margin: 0em auto auto auto;
    margin-bottom: -121mm;
    border: none;
}
#content {
    width: 880pt;
    min-height: 200mm;
    margin: 0 auto;
    padding: 0;
    color: #000000;
}
#content-wrapper { padding: 5mm; }
#content-spacer {
    min-height: 120mm;
}
#header img {
    padding: 15px 0px 25px 15px;
    user-select: none;
    margin: 0em;
    max-height: 100px;
}
#header {
    column-count: 3;
    column-gap: 0pt;
    height: 100px;
    width: auto;
    text-align: center;
    color: #333333;
    border-top: 1mm solid #f49120;
}
#header-left  {  display: block; height: 100px; text-align: left; }
#header-middle { display: block; height: 100px; text-align: center; }
#header-right {  display: block; height: 100px; text-align: right; }
#login-button {
    margin: 25px 25px auto auto;
    display: inline-block;
    padding: .5em 1em .5em 1em;
    border-radius: 1.5em;
    text-transform: uppercase;
    background: #f39000;
    color: #ffffff;
    font-size: 14pt;
    user-select: none;
}
#login-button:hover {
    background: #d26000;
    cursor: pointer;
}
#logo { height: 60px; }
#site-navigation {
    border-bottom: solid 1px #dddddd;
    background: #f9f9f9;
    background: linear-gradient(0deg, rgba(249,249,249,1) 0%, rgba(255,255,255,1) 100%);
}
#site-navigation ul {
    padding: 0pt;
    margin: 5pt 5pt 5pt 0pt;
    user-select: none;
}
#primary-menu-wrapper {
    width: 880pt;
    margin: 0 auto;
}
#primary-menu .menu-item-has-children:not(.hideshow)::after {
    content: '\f0d7';
    font-family: "FontAwesome";
    font-weight: 900;
    color: #808080;
}
#primary-menu li {
    display: inline-block;
    list-style-type: none;
    text-decoration: none;
    color: #000000;
    font-size: 12pt;
    padding: 5px 5px 5px 0px;
    margin: 0pt 5pt 0pt 0pt;
    user-select: none;
    text-transform: uppercase;
}
#site-navigation ul:first-child { margin-left: 5mm; }
#primary-menu .menu-item-has-children:hover > ul {
    background: #ffffff;
    display: block;
    min-width: 120pt;
}
#primary-menu li a { text-decoration: none; }
#primary-menu li a:hover { color: #f39000; }
.submenu {
    position: absolute;
    display: none;
    max-width: 220pt;
    background: #f1f1f1;
    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.25);
    border-radius: .5em;
    margin-top: 0pt !important;
    padding: 0pt 10pt 0pt 10pt;
    overflow: hidden;
    z-index: 1;
}
nav { display: block; }
.submenu li {
    position: block;
    display: none;
    list-style-type: none;
    text-decoration: none;
    font-size: 12pt;
    font-weight: normal;
    width: 100%;
    min-width: 100pt;
    margin: 0pt 10pt 10pt 10pt;
    padding: 5pt 10pt 5pt 10pt !important;
    user-select: none;
    text-transform: none !important;
    z-index: 0;
}
.submenu li:nth-child(even) {
    background: #fafafa !important;
}
.menu-item a { color: #505050; }
.menu-item a:hover { color: #303030; }
.submenu-item a { color: #000000; }
.submenu-item a:hover { color: #333333; }
#footer {
    height: 120mm;
    width: 100%;
    min-width: 880pt;
    margin: 0em;
    padding: auto;
    text-align: center;
    color: #ffffff;
    background: #808080;
    border-bottom: 1mm solid #f49120;
}
#footer p { padding: 0.5em 0em 0em 0em; margin: 0em; }
#footer a { color: #ffffff; }
#footer a:hover { color: #cccccc; }
a { color: #000000; }
a:hover { color: #555555; }
h1 {
    margin: 5px;
    color: #000000;
    padding: 0em;
    margin: 0em;
    border-bottom: 4px dotted #f49120;
    font-family: 'SourceSans', sans-serif;
    font-weight: normal;
    text-transform: uppercase;
}
a {
    color: #000000;
    text-decoration: underline;
    font-family: 'SourceSans', sans-serif;
}
a:hover {
    color: #666666;
    text-decoration: underline;
}
pre {
    background: #eeeeee;
    border: solid 1pt #cccccc;
    font-size: 12pt;
    padding: 5pt;
    -webkit-border-radius: 5pt;
    -moz-border-radius: 5pt;
    border-radius: 5pt;
}
#login-panel {
    display: block;
    position: relative;
}
#footer-wrapper {
    column-count: 3;
    column-gap: 0em;
    width: 880pt;
    margin: 0 auto;
    padding: 0;
}
.footer-column {
    page-break-inside: avoid;
    border: solid 1pt rgba(128,128,128,0);
    height: 110mm;
    margin: auto;
    padding: 0mm 0mm 0mm 5mm;
    text-align: left;
}
p.cts { text-align: right; }
img.cts { width: 120px; }

/* Font Awesome bits. */
.fa, .fab, .far, .fas {
    display: inline-block;
    min-width: 1.5em;
    font-family: "FontAwesome";
    font-weight: 900;
}
#search-box-wrapper {
    display: block;
    page-break-inside: avoid;
    height: 110px;
    margin: 0 auto;
    padding: 0 auto;
    user-select: none;
}
.search-submit-btn {
    background: #eeeeee;
    border-radius: 0em .5em .5em 0em;
    border: solid 2pt #eeeeee;
    display: inline-block;
    font-family: "FontAwesome";
    font-size: 14pt;
    font-weight: 900;
    height: 33pt;
    margin: 25px 0px 0px 0px;
    padding: 0em .5em 0em .5em;
}
.search-submit-btn:hover {
    cursor: pointer;
    background: #cccccc;
    border: solid 2pt #cccccc;
}
#search-box {
    background: #ffffff;
    border-radius: .5em 0em 0em .5em;
    border: solid 2pt #eeeeee;
    display: inline-block;
    font-size: 14pt;
    height: 30pt;
    margin: 25px 0px 0px 0px;
    padding: 0em 1em 0em 1em;
    width: 15em;
}
#search-box:focus {
    border: solid 2pt #eeeeee;
    background: #ffffdd;
    outline: none;
}
.fa-envelope::before { content: "\f0e0"; }
.fa-linkedin-in::before { content: "\f0e1"; }
.fa-twitter::before { content: "\f099"; }
.fa-map-marker-alt::before { content: "\f3c5"; }
.fa-copyright::before { content: "\f1f9"; }
.fa-phone::before { content: "\f095"; }
.fa-search::before { content: "\f002"; }
.fa-empty::before {}

ul.latest-datasets { list-style: square; margin-left: 0pt; padding-left: 1em; font-size: 13pt; }
.datasets-stage-one, .datasets-stage-one a { color: rgba(208,104,0,1.0); }
.datasets-stage-two, .datasets-stage-two a { color: rgba(178,104,30,0.967); }
.datasets-stage-three, .datasets-stage-three a { color: rgba(89,104,119,0.867); }
.datasets-stage-four, .datasets-stage-four a { color: rgba(0,104,208,0.767) }
.datasets-stage-five, .datasets-stage-five a { color: rgba(0,104,208,0.6); }
.datasets-stage a:hover { color: #000000; }

table { border-collapse: collapse; }

